@@ -2,6 +2,8 @@
 
 	* Do not replace *, -, / with Unicode operators if cursor is within quotation marks
 	* Refine use of quotation marks for function arguments
+	* "Edit" history item using F2 and button release, after 250 ms, instead of button press to avoid interference with double click
+	* Do not immediately add result to history on history operator button click if calculate-as-you-type is enabled
 
 2022-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
